--- a/settings.json
+++ b/settings.json
@@ -1,17 +1,50 @@
 {
   "workbench.colorTheme": "Origamid Next",
+  "workbench.iconTheme": "symbols",
+  "workbench.editor.labelFormat": "medium",
+  "workbench.activityBar.location": "hidden",
+
+  /*Extenção do vsglass*/
+  
+  "glassit.alpha": 146,
+  "glassit.blur": 200,
 
   /*Extenção do diego - Rocketseat */
-  "workbench.iconTheme": "symbols",
   "symbols.hidesExplorerArrows": false,
   "editor.fontFamily": "jets-brains regular",
-  "editor.rulers": [80, 120],
   "editor.renderLineHighlight": "gutter",
   "editor.fontLigatures": true,
-  "workbench.editor.labelFormat": "medium",
-  "explorer.compactFolders": false,
+ "explorer.compactFolders": false,
+  "editor.semanticHighlighting.enabled": false,
+  "breadcrumbs.enabled": false,
+  "editor.minimap.enabled": true,
+  "editor.scrollbar.horizontal": "hidden",
+  "editor.scrollbar.vertical": "hidden",
+  "apc.electron"{
+    "titleBarStyle": "hiddenInset",    
+  },
 
-  /*origamid-config*/
+  "apc.font.family": "Inter",
+  "apc.stylesheet": {
+    ".title-label > h2": "display: none",
+    ".editor-actions": "display: none",
+    ".nosidebar .inline-tabs-placeholder": "width: 75px",
+    ".pane-header": "padding: 0 8px",
+    ".pane-body": "padding: 8px",
+    ".split-view-view:first-child .pane-header": "display: none !important;",
+    ".monaco-list-row": "border-radius: 4px;",
+    ".monaco-workbench .monaco-list:not(.element-focused):focus:before": "display: none;"
+  },
+  "window.commandCenter": false,
+  "workbench.leyoutControls.enabled": true,
+  "exoplorer.fileNesting.enabled": true,
+"explorer.fileNesting.patterns": {
+    "package.json": ".eslint*, prettier*, tsconfig*, vite*, pnpm-lock*, bun.lockb, nest*",
+    "tailwind.config.js": "tailwind.config*, postcss.config*",
+    ".env.local": ".env*",
+    ".env": ".env*"
+  },
+ /*origamid-config*/
   "editor.font-Size": 14.5,
   "editor.lineHeight": 1.9,
   "editor.tabSize": 2,
@@ -38,6 +71,6 @@
     "editor.bracketPairColorization.enabled": false,
     "color-highlight.markerType": "background",
     "editor.colorDecorators": true
-  }
+  },
+  
 }
-
