--- a/settings.json
+++ b/settings.json
@@ -1,64 +1,24 @@
 {
+  // Principais utilizados
   "workbench.colorTheme": "Origamid Next",
   "workbench.iconTheme": "symbols",
+  "symbols.hidesExplorerArrows": true,
+  "editor.fontSize": 14,
+  "editor.lineHeight": 2,
+
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.wordWrap": "on",
+
+  "editor.tabSize": 2,
+
   "workbench.editor.labelFormat": "medium",
-  "workbench.activityBar.location": "hidden",
-
-  /*Extenção do vsglass*/
-  
-  "glassit.alpha": 146,
-  "glassit.blur": 200,
-
-  /*Extenção do diego - Rocketseat */
-  "symbols.hidesExplorerArrows": false,
-  "editor.fontFamily": "jets-brains regular",
-  "editor.renderLineHighlight": "gutter",
+  "editor.fontFamily": "fira code",
+  "editor.renderLineHighlight": "line",
   "editor.fontLigatures": true,
- "explorer.compactFolders": false,
-  "editor.semanticHighlighting.enabled": false,
-  "breadcrumbs.enabled": false,
-  "editor.minimap.enabled": true,
+  "explorer.compactFolders": false,
   "editor.scrollbar.horizontal": "hidden",
   "editor.scrollbar.vertical": "hidden",
-  "apc.electron"{
-    "titleBarStyle": "hiddenInset",    
-  },
-
-  "apc.font.family": "Inter",
-  "apc.stylesheet": {
-    ".title-label > h2": "display: none",
-    ".editor-actions": "display: none",
-    ".nosidebar .inline-tabs-placeholder": "width: 75px",
-    ".pane-header": "padding: 0 8px",
-    ".pane-body": "padding: 8px",
-    ".split-view-view:first-child .pane-header": "display: none !important;",
-    ".monaco-list-row": "border-radius: 4px;",
-    ".monaco-workbench .monaco-list:not(.element-focused):focus:before": "display: none;"
-  },
-  "window.commandCenter": false,
-  "workbench.leyoutControls.enabled": true,
-  "exoplorer.fileNesting.enabled": true,
-"explorer.fileNesting.patterns": {
-    "package.json": ".eslint*, prettier*, tsconfig*, vite*, pnpm-lock*, bun.lockb, nest*",
-    "tailwind.config.js": "tailwind.config*, postcss.config*",
-    ".env.local": ".env*",
-    ".env": ".env*"
-  },
- /*origamid-config*/
-  "editor.font-Size": 14.5,
-  "editor.lineHeight": 1.9,
-  "editor.tabSize": 2,
-  "workbench.startupEditor": "newUntitledFile",
-  "editor.wordWrap": "on",
-  "editor.minimap.renderCharacters": false,
-  "telemetry.telemetryLevel": "off",
   "security.workspace.trust.untrustedFiles": "open",
-  "breadcrumbs.filePath": "off",
-  "outline.icons": false,
-  "liveServer.settings.donotShowInfoMsg": true,
-  "liveServer.settings.donotVerifyTags": true,
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
 
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features",
@@ -68,9 +28,19 @@
   },
 
   "[css]": {
-    "editor.bracketPairColorization.enabled": false,
+    "editor.bracketPairColorization.enabled": true,
     "color-highlight.markerType": "background",
     "editor.colorDecorators": true
   },
-  
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
+
+  "liveServer.settings.donotShowInfoMsg": true,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "files.autoSave": "afterDelay",
+  "editor.codeLensFontFamily": "'MesloLGS NF'",
+  "workbench.settings.applyToAllProfiles": ["editor.codeLensFontFamily"]
 }
